--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
 name = "spyropose"
-version = "0.0.0"
+version = "0.1.0"
 license = { file = "LICENSE" }
+requires-python = ">=3.12"
 dependencies = [
     "torch >= 2.3.0",
     "torchvision >= 0.18.0",
@@ -15,3 +16,17 @@ dependencies = [
     "moderngl >= 5.10.0",
     "einops >= 0.8.0",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.ruff]
+line-length = 88
+indent-width = 4
+
+[tool.ruff.lint]
+ignore = ["E741"]
+
+[tool.ruff.format]
+indent-style = "space"
