--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "icosphere >= 0.1.3",
     "moderngl >= 5.10.0",
     "einops >= 0.8.0",
+    "jsonargparse>=4.40.0",
+    "pyqt6>=6.9.0",
 ]
 
 [build-system]
